--- a/HospitalSystem/Views/Home/Signup.cshtml
+++ b/HospitalSystem/Views/Home/Signup.cshtml
@@ -6,55 +6,72 @@
 
 }
 
-    <div class="signup-area">
-        <section class="signup-section layout-padding-bottom">
-            <div class="container">
-                <div class="heading-container">
-                    <h2>Sign Up</h2>
-                </div>
-                <div class="row">
-                    <div class="col-md-7">
-                        <div class="form-container">
-                        <form action="~/index.html" method="get">
+<div class="signup-area">
+    <section class="signup-section layout-padding-bottom">
+        <div class="container">
+            <div class="heading-container">
+                <h2>Sign Up</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="form-container">
+                        <form method="post">
+                            <input type="text" name="email" class="form-control" id="name" placeholder="email" required>
+                            <input type="text" name="name" class="form-control" id="name" placeholder="name" required>
+                            <input type="tel" name="phone" class="form-control" id="name" placeholder="Phone" required>
+                            <input type="password" name="password" class="form-control" id="name" placeholder="Password" required>
+                            <input type="password" name="conpass" class="form-control" id="name" placeholder="confirmPassword" required>
+
                             <div>
-                                    <input type="text" placeholder="Full Name" />
-                                </div>
-                                <div>
-                                    <input type="email" placeholder="Email" />
-                                </div>
-                                <div>
-                                    <input type="text" placeholder="Phone Number" />
-                                </div>
-                                <div>
-                                    <input type="password" placeholder="Password" />
-                                </div>
-                                <div>
-                                    <input type="password" placeholder="Confirm Password" />
-                                </div>
-                                <div>
-                                    <input type="text" placeholder="Gender" />
-                                    <select name="gender" id="gender">
-                                        <option disabled selected>Select your gender</option>
-                                        <option value="female">Female</option>
-                                        <option value="male">Male</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <input type="text" class="message-box" placeholder="Any Comment" />
-                                </div>
-                                <div class="btn-box">
-                                    <button type="submit">SEND</button>
-                                </div>
-                            </form>
-                        </div>
+
+                                <select name="gen" id="gender">
+                                    <option disabled selected>Select your gender</option>
+                                    <option value="female">Female</option>
+                                    <option value="male">Male</option>
+                                </select>
+                            </div>
+
+                            <input type="submit" />
+                            @*<div>
+                            <input type="text" placeholder="Full Name" />
+                            </div>
+                            <div>
+                            <input type="email" placeholder="Email" />
+                            </div>
+                            <div>
+                            <input type="text" placeholder="Phone Number" />
+                            </div>
+                            <div>
+                            <input type="password" placeholder="Password" />
+                            </div>
+                            <div>
+                            <input type="password" placeholder="Confirm Password" />
+                            </div>
+                            <div>
+                            <input type="text" placeholder="gender" />
+                            </div>
+                            @*  <div>
+                            <input type="text" placeholder="Gender" />
+                            <select name="gender" id="gender">
+                            <option disabled selected>Select your gender</option>
+                            <option value="female">Female</option>
+                            <option value="male">Male</option>
+                            </select>
+                            </div>
+
+                            <div class="btn-box">
+                            <button type="submit">SEND</button>
+                            </div>*@
+                        </form>
                     </div>
-                     <div class="col-md-5">
-                        <div class="img-box">
-                            <img src="~/images/signup.jpg" alt="">
-                        </div>
-                    </div> 
+                </div>
+                <div class="col-md-5">
+                    <div class="img-box">
+                        <img src="~/images/signup.jpg" alt="">
+                    </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+</div>
 
