--- a/HospitalSystem/Views/Home/login.cshtml
+++ b/HospitalSystem/Views/Home/login.cshtml
@@ -16,16 +16,10 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="form-container">
-                        <form action="~/index.html" method="get">
-                            <div>
-                                <input type="text" id="username" placeholder="your username" />
-                            </div>
-                            <div>
-                                <input type="password" id="password" placeholder="your password" />
-                            </div>
-                            <div>
-                                <input type="submit" value="login">
-                            </div>
+                        <form method="post">
+                            <input type="text" name="email" class="form-control" id="name" placeholder="email" required>
+                            <input type="password" name="password" class="form-control" id="name" placeholder="password" required>
+                            <input type="submit" />
                         </form>
                     </div>
 
