--- a/HospitalSystem/Views/Shared/_Layout1.cshtml
+++ b/HospitalSystem/Views/Shared/_Layout1.cshtml
@@ -76,16 +76,16 @@
                         <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                             <ul class="navbar-nav  ">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="Index.cshtml">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html"> About</a>
+                                    <a class="nav-link" href="About.cshtml"> About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="treatment.html">Treatment</a>
+                                    <a class="nav-link" href="treatment.cshtml">Treatment</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="doctor.html">Doctors</a>
+                                    <a class="nav-link" href="Doctor.cshtml">Doctors</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -93,23 +93,23 @@
                                 </li>
 
                                   <li class="nav-item">
-                                <a class="nav-link" href="~/patientrRport.html">Patient Reprot</a>
+                                <a class="nav-link" href="patientrRport.cshtml">Patient Reprot</a>
                                 </li>
 
                                 <li class="nav-item">
-                                <a class="nav-link" href="~/book.html">appoitment</a>
+                                <a class="nav-link" href="book.cshtml">appoitment</a>
                                 </li> 
 
                             </ul>
                         </div>
                         <div class="quote_btn-container">
-                            <a href="~/login.html">
+                            <a href="login.cshtml">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span>
                                     Login
                                 </span>
                             </a>
-                            <a href="~/signup.html">
+                            <a href="Signup.cshtml">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span>
                                     Sign Up
