--- a/HospitalSystem/Views/Home/Index.cshtml
+++ b/HospitalSystem/Views/Home/Index.cshtml
@@ -655,7 +655,7 @@
         </div>
     </section>
 
-    <section class="treatment_section layout_padding">
+  @*   <section class="treatment_section layout_padding">
         <div class="side_img">
             <img src="images/treatment-side-img.jpg" alt="">
         </div>
@@ -744,7 +744,6 @@
 
     <!-- end treatment section -->
     <!-- team section -->
-    <!-- end treatment section -->
 
     <section class="team_section layout_padding">
         <div class="container">
@@ -936,7 +935,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> *@
 
     <!-- info section -->
     <section class="info_section ">
@@ -1006,21 +1005,14 @@
                                 <a class="active" href="index.html">
                                     Home
                                 </a>
-                                <a href="about.html">
-                                    About
+                                
+                                <a href="~/PatientIndex.html">
+                                    Continue As Patient
                                 </a>
-                                <a href="treatment.html">
-                                    Treatment
+                                <a href="~/doctor.html">
+                                    Continue As Doctor
                                 </a>
-                                <a href="doctor.html">
-                                    Doctors
-                                </a>
-                                <a href="testimonial.html">
-                                    Testimonial
-                                </a>
-                                <a href="contact.html">
-                                    Contact us
-                                </a>
+                               
                             </div>
                         </div>
                     </div>
