--- a/HospitalSystem/Views/Home/book.cshtml
+++ b/HospitalSystem/Views/Home/book.cshtml
@@ -22,44 +22,62 @@
                             <div class="form-group col-lg-4">
                                 <label for="inputDoctorName">Doctor's Name</label>
                                 <select name="" class="form-control wide" id="inputDoctorName">
-                                    <option value="Normal distribution ">Normal distribution </option>
-                                    <option value="Normal distribution ">Normal distribution </option>
-                                    <option value="Normal distribution ">Normal distribution </option>
+                                    <option value="">Select Doctor</option>
+                                    <option value="Normal distribution ">Hennry </option>
+                                    <option value="Normal distribution ">Morco</option>
+                                    <option value="Normal distribution ">Henni  </option>
+
                                 </select>
                             </div>
                             <div class="form-group col-lg-4">
                                 <label for="inputDepartmentName">Department's Name</label>
                                 <select name="" class="form-control wide" id="inputDepartmentName">
-                                    <option value="Normal distribution ">Normal distribution </option>
-                                    <option value="Normal distribution ">Normal distribution </option>
-                                    <option value="Normal distribution ">Normal distribution </option>
+                                    <option value="">Select Department</option>
+                                    <option value="Normal distribution ">Cardiology </option>
+                                    <option value="Normal distribution ">Neurology </option>
+                                    <option value="Normal distribution ">Hematology </option>
+                                    <option value="Normal distribution ">Ear, Nose and Throat(ENT) </option>
+                                    <option value="Normal distribution ">Surgical </option>
+                                    <option value="Normal distribution ">Internal Medicine </option>
+                                    <option value="Normal distribution ">Pediatric </option>
+                                    <option value="Normal distribution ">Dental </option>
+                                    <option value="Normal distribution ">Psychiatry </option>
+                                    <option value="Normal distribution ">Neurology </option>
+                                    <option value="Normal distribution ">Ophthalmology </option>
+                                    <option value="Normal distribution ">Dermatology </option>
+                                    <option value="Normal distribution ">Gastroenterology </option>
+                                    <option value="Normal distribution ">Cardiology  </option>
+                                    <option value="Normal distribution ">Plastic Surgery </option>
+                                    <option value="Normal distribution ">Pulmonology </option>
+                                    <option value="Normal distribution ">x-ray wourd </option>
+
                                 </select>
                             </div>
                         </div>
                         <div class="form-row ">
                             <div class="form-group col-lg-4">
                                 <label for="inputPhone">Phone Number</label>
-                                <input type="number" class="form-control" id="inputPhone" placeholder="XXXXXXXXXX">
+                                <input type="number" class="" id="inputPhone" placeholder="XXXXXXXXXX">
                             </div>
                             <div class="form-group col-lg-4">
                                 <label for="inputSymptoms">Symptoms</label>
                                 <input type="text" class="form-control" id="inputSymptoms" placeholder="">
                             </div>
                             <div class="form-group col-lg-4">
-                                <label for="inputDate">Choose Date </label>
-                                <div class="input-group date" id="inputDate" data-date-format="mm-dd-yyyy">
-                                    <input type="text" class="form-control" readonly>
-                                    <span class="input-group-addon date_icon">
-                                        <i class="fa fa-calendar" aria-hidden="true"></i>
-                                    </span>
-                                </div>
+
+                                <label for="calendarInput">Select Date:</label>
+                                <input type="date" id="calendarInput" name="date">
+                                <br>
+
+                                <br>
+                                <button type="submit">Submit</button>
+
                             </div>
                         </div>
-                        <div class="btn-box">
-                            <button type="submit" class="btn ">Submit Now</button>
-                        </div>
                     </form>
+
                 </div>
+
             </div>
         </div>
     </section>
