--- a/HospitalSystem/Views/Shared/_Layout.cshtml
+++ b/HospitalSystem/Views/Shared/_Layout.cshtml
@@ -78,27 +78,31 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="about.html"> About</a>
+                               @*  <li class="nav-item">
+                                    <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="treatment.html">Treatment</a>
+                                    <a class="nav-link" href="treatment.html">Treatment <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="doctor.html">Doctors</a>
-                                </li>
-                                
+                                    <a class="nav-link" href="doctor.html">Doctors <span class="sr-only">(current)</span></a>
+                                </li> *@
+
+                                @* <li class="nav-item">
+                                    <a class="nav-link" href="~/book.html">appoitment</a>
+                                </li> 
+ *@
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact Us</a>
-                                </li>
+                                    <a class="nav-link" href="~/DrIndex.html">Continue As Doctor <span class="sr-only">(current)</span></a>
+                                </li> 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="~/book.html">appoitment</a>
+                                    <a class="nav-link" href="~/PatientIndex.html">Continue As Patient <span class="sr-only">(current)</span></a>
                                 </li> 
 
                             </ul>
                         </div>
-                        <div class="quote_btn-container">
+                        @* <div class="quote_btn-container">
                             <a href="~/login.html">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span>
@@ -116,7 +120,7 @@
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </button>
                             </form>
-                        </div>
+                        </div> *@
                     </div>
                 </nav>
             </div>
