--- a/HospitalSystem/Views/Home/book.cshtml
+++ b/HospitalSystem/Views/Home/book.cshtml
@@ -19,7 +19,21 @@
                                 <label for="inputPatientName">Patient Name </label>
                                 <input type="text" class="form-control" id="inputPatientName" placeholder="">
                             </div>
-                            <div class="form-group col-lg-4">
+
+                            <!--test-->
+                            <div class="form-group col-lg-4"> <label for="inputDoctorName">Doctor's Name</label> 
+                                <select name="" class="form-control wide" id="inputDoctorName"> 
+                                    <option value="">Select Doctor</option> @foreach (var item in Model.DoctorNames)
+                                    {
+                                        <option value="@item.Value">@item.Text</option>
+                                    } 
+                                </select> 
+                             </div>
+
+
+
+
+                           @*  <div class="form-group col-lg-4">
                                 <label for="inputDoctorName">Doctor's Name</label>
                                 <select name="" class="form-control wide" id="inputDoctorName">
                                     <option value="">Select Doctor</option>
@@ -28,7 +42,7 @@
                                     <option value="Normal distribution ">Henni  </option>
 
                                 </select>
-                            </div>
+                            </div> *@
                             <div class="form-group col-lg-4">
                                 <label for="inputDepartmentName">Department's Name</label>
                                 <select name="" class="form-control wide" id="inputDepartmentName">
