--- a/HospitalSystem/Views/Shared/_Layout.cshtml
+++ b/HospitalSystem/Views/Shared/_Layout.cshtml
@@ -77,27 +77,13 @@
                             <ul class="navbar-nav  ">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                               @*  <li class="nav-item">
-                                    <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span></a>
-                                </li>
+                            
                                 <li class="nav-item">
-                                    <a class="nav-link" href="treatment.html">Treatment <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="doctor.html">Doctors <span class="sr-only">(current)</span></a>
-                                </li> *@
-
-                                @* <li class="nav-item">
-                                    <a class="nav-link" href="~/book.html">appoitment</a>
-                                </li> 
- *@
-                                <li class="nav-item">
-                                    <a class="nav-link" href="~/DrIndex.html">Continue As Doctor <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="~/preDrIndex.html">Continue As Doctor <span class="sr-only">(current)</span></a>
                                 </li> 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="~/PatientIndex.html">Continue As Patient <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="~/prePatientIndax.html">Continue As Patient <span class="sr-only">(current)</span></a>
                                 </li> 
 
                             </ul>
