--- a/HospitalSystem/Views/Home/DrLogin.cshtml
+++ b/HospitalSystem/Views/Home/DrLogin.cshtml
@@ -15,8 +15,8 @@
 
 
                             <div>
-                                <label for="user">Username:</label>
-                                <input type="text" id="username" placeholder="your username" />
+                                <label for="user">Email:</label>
+                                <input type="text" id="email" placeholder="your email" />
                             </div>
                             <div>
                                 <label for="user">Password:</label>
