--- a/HospitalSystem/Views/Home/MangerLogin.cshtml
+++ b/HospitalSystem/Views/Home/MangerLogin.cshtml
@@ -2,19 +2,18 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Login Page";
+    
+    ViewData["Title"] = "Manger Login Page";
 
 }
-
-
-<div class="login-area">
-    <section class="signup_section layout-padding-bottom">
+<div>
+    <section class="login_section layout-padding-bottom">
         <div class="container">
 
             <div class="row">
                 <div class="col-md-7">
                     <div class="form-container">
-                        <form id="login" action="PatientIndex.html" method="get">
+                        <form id="login" action="ManIndex.html" method="get">
 
 
                             <div>
@@ -32,11 +31,7 @@
                         </form>
                     </div>
                 </div>
-                <!--<div class="col-md-5">
-                    <div class="img-box">
-                        <img src="images/signup.jpg" alt="">
-                    </div>
-                </div>-->
+              
             </div>
         </div>
     </section>
